# ollama-gui

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: workflow.yml
backend/: .env.example  README.md  backend-main.py  pyproject.toml
backend/app/api/: api-router.py  chat-endpoint.py
backend/app/db/: database-models.py
backend/app/providers/: provider-base.py  provider-ollama.py
backend/config/: config-module.py  config.txt
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docs/: project-structure.txt
frontend/: README.md  package.json
frontend/src/lib/api/: api-client.ts  websocket-client.ts
frontend/src/lib/components/: chat-message-component.ts  sidebar-component.ts
frontend/src/lib/stores/: auth-store.ts  conversations-store.ts  models-store.ts  settings-store.ts
frontend/src/lib/utils/: typescript-types.ts
frontend/src/routes/: chat-page.ts  frontend-layout.ts
